Tecton spores attribútuma LinkedList lett ArrayList-ről.